--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </div>
             <div class="alice">
                 <h3>alice johnson</h3>
+                <h3>hsdg</h3>
+                <h3>43</h3>
                 <div class="status">status:<br>hired</div>
                 <div class="movebtn">move to <br> rejected</div>
             </div>
